--- a/Άσκηση 3/style.css
+++ b/Άσκηση 3/style.css
@@ -10,51 +10,122 @@ html {
 
 /** Για τις ερωτήσεις 1.1, 1.2, 1.3 **/
 
-.recipe header .recipe .recipe footer {
+.recipe {
 	width: 35em;
 	height: 22em;
 	margin: 5em auto;
 	background-color: #144141;
 	border: 0.2em solid black;
 }
- {
-	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-}
- {
+.recipe header {
 	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+.recipe footer {
+	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
 }
 
 /* Γράψτε την απάντηση σε κάθε μια από τις ερωτήσεις */
 /* 2.1 */
+:root {
+	font-size: 10px;
+}
 
 /* 2.2 */
+.recipe {
+	border: 0.2em solid black;
+}
 
 /* 2.3 */
+.recipe header, .recipe footer{
+	height: 5em;
+}
 
 /* 2.4 */
+.recipe h2, .recipe p {
+	margin: 0;
+}
 
 /* 2.5 */
+.recipe {
+	color: rgba(255, 255, 255, 0.8);
+}
 
 /* 2.6 */
+.recipe article {
+	height: 12em;
+}
 
 /* 2.7 */
+.recipe h2 {
+	font-size: 2em;
+}
 
 /* 2.8 */
+.recipe header {
+	line-height: 5em;
+}
 
 /* 2.9 */
+.recipe footer p {
+	display: inline;
+}
 
 /* 2.10 */
+.recipe footer p:first-child {
+	margin-right: 1em;
+}
 
 /* 2.11 */
+.recipe footer p {
+	font-size: 1.5em;
+}
+.recipe footer {
+	line-height: 5em;
+}
 
 /* 2.12 */
+.recipe p {
+	font-size: 1.4em;
+}
 
 /* 2.13 */
+.recipe {
+	background-image: url(s_minestrone.png);
+	background-size: cover;
+	background-position: center;
+}
 
 /* 2.14 */
+.recipe article {
+	background-color: rgba(0, 0, 0, 0.5);
+}
 
 /* 2.15 */
+.recipe header, .recipe article, .recipe footer {
+	padding: 5px 10px;
+}
 
 /* 2.16 */
+.recipe header {
+	height: 4em;
+	line-height: 4em;
+}
+.recipe article {
+	height: 11em;
+}
+.recipe footer {
+	height: 4em;
+	line-height: 4em;
+}
 
 /* 2.17 */
+.recipe hr {
+	width: 50%;
+	background-color: #D0BB57;
+	height: 0.3em;
+	margin: 0 auto;
+	border: none;
+}
+.recipe div {
+	background-color: rgba(0, 0, 0, 0.5);
+}
